added the nav-bar and the main section

--- a/style.css
+++ b/style.css
@@ -1,4 +1,32 @@
 body {
-  color: 0;
+  color: 38;
+  overflow-x: hidden;
+  background-color: #e1d8ec;
+}
+
+.editor {
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.string {
+  color: #c7ab0d;
+}
+
+.link {
+  color: aqua;
+}
+
+a {
+  text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+  .header {
+    margin: auto;
+  }
 }
 /*# sourceMappingURL=style.css.map */
