--- a/styles/style.scss
+++ b/styles/style.scss
@@ -16,7 +16,6 @@ header {
 p {
     font-family: Camphor, Open Sans, Segoe UI, sans-serif;
     color: #5c6186;
-    font-size: 1.5rem;
 }
 
 .editor-h {
@@ -44,7 +43,7 @@ p {
         color: #747fe0;
     }
     .beep {
-        font-size: 8rem;
+        font-size: 4.5rem;
         height: 10px;
         background-color: #747fe0;
     }
@@ -106,6 +105,14 @@ a:hover {
 @media screen and (max-width:768px) {
     .header {
         margin: auto;
+    }
+    .name {
+        h1 {
+            font-size: 2.5rem;
+        }
+        .beep {
+            font-size: 2.5rem;
+        }
     }
 }
 
