reduced the image size

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,13 +33,13 @@ p {
 }
 
 .name h1 {
-  font-size: 4.5rem;
+  font-size: 4.5em;
   font-family: Camphor, Open Sans, Segoe UI, sans-serif;
   color: #747fe0;
 }
 
 .name .beep {
-  font-size: 4.5rem;
+  font-size: 1em;
   height: 10px;
   background-color: #747fe0;
 }
@@ -110,10 +110,10 @@ a:hover {
     margin: auto;
   }
   .name h1 {
-    font-size: 2.5rem;
+    font-size: 2.5em;
   }
   .name .beep {
-    font-size: 2.5rem;
+    font-size: 2.5em;
   }
 }
 
