--- a/styles/style.scss
+++ b/styles/style.scss
@@ -38,12 +38,12 @@ p {
 
 .name {
     h1 {
-        font-size: 4.5rem;
+        font-size: 4.5em;
         font-family: Camphor, Open Sans, Segoe UI, sans-serif;
         color: #747fe0;
     }
     .beep {
-        font-size: 4.5rem;
+        font-size: 1em;
         height: 10px;
         background-color: #747fe0;
     }
@@ -108,10 +108,10 @@ a:hover {
     }
     .name {
         h1 {
-            font-size: 2.5rem;
+            font-size: 2.5em;
         }
         .beep {
-            font-size: 2.5rem;
+            font-size: 2.5em;
         }
     }
 }
