changed some colors

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ p {
   font-size: 20px;
   letter-spacing: 2px;
   word-spacing: 2px;
-  color: #000000;
+  color: #46435c;
   font-weight: 400;
   text-decoration: none;
   font-style: normal;
